# CSC195

./: .gitignore  CMakeLists.txt  CSC195.sln
Container/: CMakeLists.txt  main.cpp
Containers/: CMakeLists.txt  main.cpp
DataTypes/: CMakeLists.txt  DataTypes.cpp  Employee.cpp  Employee.h
Database/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  Database.cpp  Database.h  Main.cpp  Mammal.cpp  Mammal.h  Reptile.cpp  Reptile.h
Fail/: CMakeLists.txt  Circle.h  Main.cpp  Rectangle.h  Shape.h
Fractions/: CMakeLists.txt  Fraction.h  Main.cpp
GuessingGame/: CMakeLists.txt  Game.cpp  Game.h  GuessingGame.cpp
HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.vcxproj
HelloWorld2.0/: HelloWorld2.0.cpp  HelloWorld2.0.vcxproj  HelloWorld2.0.vcxproj.filters  HelloWorld2.cpp
Memory/: CMakeLists.txt  main.cpp
MemoryReview/: CMakeLists.txt  MemoryReview-1.cpp  main.cpp
OOP/: CMakeLists.txt  Food.h  Fruit.cpp  Fruit.h  Veggie.cpp  Veggie.h  main.cpp
Overloading/: CMakeLists.txt  Main.cpp  Point.cpp  Point.h
Pointers/: CMakeLists.txt  Main.cpp
Streams/: CMakeLists.txt  Main.cpp
Template/: CMakeLists.txt  Main.cpp  TempClass.h
UserDataTypes/: CMakeLists.txt  Sandwich.cpp  Sandwich.h  UserDatatypes.cpp
