cmake_minimum_required(VERSION 3.30)
project(CSC195)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(DataTypes)
add_subdirectory(GuessingGame)
add_subdirectory(HelloWorld)
add_subdirectory(UserDataTypes)
add_subdirectory(Memory)
add_subdirectory(MemoryReview)
add_subdirectory(Container)
add_subdirectory(Containers)
add_subdirectory(OOP)
